# servic-poc

./: Cargo.toml  README.md  build.rs
proto/: dot_service.proto
src/: lib.rs  main.rs
src/dots/: data_model.rs  dots_service.rs  mod.rs
src/dots/cassandra/: dots_dao.rs  mod.rs  setup.rs
src/proto/: dots.rs
