[package]
name = "dots_poc"
version = "0.1.0"
authors = ["Andrew Tuliszewski <defpearlpilot@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cassandra-cpp = "0.15.1"
cassandra-cpp-sys = "0.12.1"
cdrs = "2"
cdrs_helpers_derive = "0.3.3"
maplit = "1.0.2"
prost = "0.6.1"
prost-derive = "0.6.1"
bytes = "0.5.5"

tonic = {version="0.2.2", features = ["tls"]}
tokio = {version="0.2.21", features = ["macros", "rt-core", "rt-threaded"]}
futures = "0.3.5"

[lib]
name = "dots_poc"
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.2"

#[[bin]]
#name = "dot-service"
#path = "src/bin/dots_server.rs"

